Use Dose as RTSpecialElement